clleaning up swago annotations
